lessons/194/2-example/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-2
  annotations:
    cert-manager.io/cluster-issuer: dns-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: api.antonputra.com # You MUST update this
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-service-2
                port:
                  number: 8080
  tls:
    - hosts:
        - api.antonputra.com
      secretName: api-antonputra-com
